@@ -1,3 +1,8 @@
+2012-09-14  Dehao Chen  <dehao@google.com>
+
+	* testsuite/libjava.lang/sourcelocation.java: New cases.
+	* testsuite/libjava.lang/sourcelocation.out: New cases.
+
 2012-09-14  David Edelsohn  <dje.gcc@gmail.com>
 
 	* configure: Regenerated.
